--- a/Register.html
+++ b/Register.html
@@ -3,16 +3,31 @@
 <html>
 <body>
 <form>
-	First Name:<input type="text" name="firstname">
-	Last Name:<input type="text" name="lastname">
-	D.O.B:<input type="date" name="birthday">
-	Email Address:<input type="Email" name="emailid" required>
-	Gender:<input type="radio" name="gender">
-	Male<input type="radio" name="gender" value="Male">
-	Female<input type="radio" name="gender" value="FeMale">
-	Other<input type="radio" name="gender" value="Other">
-	Hobbies:<input type="Select" name="Dance">
-	Pets:<input type="text" name="firstname">
+	First Name:<input type="text" name="firstname"><br>
+	Last Name:<input type="text" name="lastname"><br>
+	Password:<input type="Password" minlength="5" ><br>
+	D.O.B:<input type="date" name="birthday"><br>
+	Email Address:<input type="Email" name="emailid" required><br>
+	Gender:<br>
+	<input type="radio" name="gender">Male<br>
+	<input type="radio" name="gender">Female<br>
+	<input type="radio" name="gender">Other<br>
+	Hobbies:
+	<select>
+		<option value="dance">Dance</option><br>
+		<option value="Swimming">Swimming</option><br>
+		<option value="yoga">Yoga</option><br>
+		<option value="Singing">Singing</option><br>
+		<option value="Gaming">Gaming</option><br>
+	</select><br>
+	Pets:<br>
+	<input type="checkbox">Cat<br>
+	<input type="checkbox">Dog<br>
+	<input type="checkbox">Rabbit<br>
+	<input type="checkbox">Snake<br>
+	<input type="checkbox">Mouse<br>
+<input type="Submit" Value="Register">
+<input type="Reset" Value=" Reset"><br>
 </form>
 </body>
 </html>
